--- a/tekton/tasks.yaml
+++ b/tekton/tasks.yaml
@@ -66,7 +66,7 @@ spec:
     - name: database_uri
       description: Database connection string
       type: string
-      default: "sqlite://test.db"
+      default: "sqlite:///test.db"
   steps:
     - name: nosetests
       image: python:3.9-slim
